Ensure fragment schemas have all properties copied from graph.